first class of html

--- a/class1.Html
+++ b/class1.Html
@@ -41,3 +41,44 @@ span :
 they are in same line
 
 they are inline elements.
+
+para is  also a block level  element
+div is also a blaock level element
+
+difference beteen para and div ?
+ 
+ para has spaces in between lines but div doesnot have  that.
+
+ in order to take the information from user we use input tag .
+
+ there are few tags where the close tag is not manadatory one of tem is the input tag.
+
+ example 
+
+ <input> // input with no type attribue. </br> // input with no type attribue.
+ <input type="text" name=""><br> // you can select and unselect  // in the text any information can be unentered.
+ <input type="radio" name="">
+ <input type="checkbox" name="">
+ <input type="date" name="">
+ <input type="number" name="">
+
+
+ they are inline elements .
+
+
+ Attributes .
+
+ within the open tag in order to more information about the content.  we use attribute.
+
+ you  can have multiple attributes in single tag.
+
+
+ Homework 2:
+
+ look into all the input attributes in html. when to use describe by example.
+
+ what are sematic elements why they are helpful ? // w3  schools. HTML tag references and mozilla developer network, html5 doctor
+
+ look into all possible tags.
+
+
