--- a/homework2.html
+++ b/homework2.html
@@ -1,6 +1,6 @@
 1.look into all the input attributes in html. when to use describe by example.
 
-Input Type: text : Input Type: text : <input type="text"> defines a one-line input field for text input:
+Input Type: text : <input type="text"> defines a one-line input field for text input:
 
 <input type="text" name="texttype">
 
