--- a/homework2.html
+++ b/homework2.html
@@ -4,7 +4,10 @@ Input Type: text : <input type="text"> defines a one-line input field for text i
 
 <input type="text" name="texttype">
 
+Input Type: password
+<input type="password"> 
 
+<input type="button"> defines a button:
 
 2.what are semantic elements?
 
