--- a/homework2.html
+++ b/homework2.html
@@ -7,7 +7,7 @@ Input Type: text : <input type="text"> defines a one-line input field for text i
 Input Type: password
 <input type="password"> <br>
 
-<input type="button"> <br><br>
+<input type="button" width="300" name="git button"> <br><br>
 <input type="checkbox"> <br>
 
 
