--- a/homework2.html
+++ b/homework2.html
@@ -9,11 +9,22 @@ Input Type: password
 
 <input type="button" value="git button" width="100"> <br><br>
 <input type="checkbox"> <br>
+<input type="radio"> <br> <br>
+<input type="checkbox"> <br>
+
+
+there are different types of input attributes : the different types of input attributes provide more meaning to the input attribue 
+.
+example : 
+
+1. The value attribute specifies the initial value for an input field.  <input type="text" name="firstname" value="UIclassjuly7">
+2. The type attribue specifies what type of input will it take.  
+3.The readonly attribute specifies that the input field is read only   <input type="text" name="firstname" value="UIclassjuly7" readonly>
 
 
 2.what are semantic elements?
 
-Semantic elements are elements with a meaning.
+Semantic elements are elements with a meaning.The readonly attribute specifies that the input field is read only
 
 A semantic element clearly describes its meaning to both the browser and the developer.
 
