--- a/homework2.html
+++ b/homework2.html
@@ -17,9 +17,9 @@ there are different types of input attributes : the different types of input att
 .
 example : 
 
-1. The value attribute specifies the initial value for an input field.  <input type="text" name="firstname" value="UIclassjuly7">
-2. The type attribue specifies what type of input will it take.  
-3.The readonly attribute specifies that the input field is read only   <input type="text" name="firstname" value="UIclassjuly7" readonly>
+1. The value attribute specifies the initial value for an input field.  <input type="text" name="firstname" value="UIclassjuly7"> <br><br><br>
+2. The type attribue specifies what type of input will it take.  <br>
+3.The readonly attribute specifies that the input field is read only   <input type="text" name="firstname" value="UIclassjuly7" readonly> <br>
 
 
 2.what are semantic elements?
