--- a/homework2.html
+++ b/homework2.html
@@ -22,6 +22,8 @@ example : <br>
 3.The readonly attribute specifies that the input field is read only   <input type="text" name="firstname" value="UIclassjuly7" readonly> <br>
 4. The disabled attribute specifies that the input field is disabled.    <input type="text" name="firstname" value="UIclassjuly7" disabled> <br>
 5.The size attribute specifies the size (in characters) for the input field  <input type="text" name="firstname" value="UIclassjuly7" size="120"> <br>
+<br><br>
+6. The maxlength attribute specifies the maximum allowed length for the input field <input type="text" name="firstname" value="UIclassjuly7" maxlength="12"> <br>
 
 
 2.what are semantic elements?
