--- a/homework2.html
+++ b/homework2.html
@@ -24,6 +24,7 @@ example : <br>
 5.The size attribute specifies the size (in characters) for the input field  <input type="text" name="firstname" value="UIclassjuly7" size="120"> <br>
 <br><br>
 6. The maxlength attribute specifies the maximum allowed length for the input field <input type="text" name="firstname" value="UIclassjuly7" maxlength="12"> <br>
+7. The required attribute is a boolean attribute <input type="text" name="firstname" value="UIclassjuly7" required> <br> <input type="submit" name="button" value="submit">
 
 
 2.what are semantic elements?
