--- a/trying to learn hoisting.html
+++ b/trying to learn hoisting.html
@@ -27,8 +27,10 @@
 			console.log(a);
 			function func2(){ // complte function will be hoisted
 				//console.log(a);
-console.log(b);
+                 console.log(b);
 				var b = 40;
+
+				//b=40; //  it will give an error b is not defined 
 				//return b;
 				//return 20;
 
